// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BreadcrumbItem rendering renders expected elements 1`] = `
<li
  className="Breadcrumb__item"
>
  Test
  <span
    aria-hidden="true"
    className="Breadcrumb__separator"
  >
    /
  </span>
</li>
`;

exports[`BreadcrumbItem rendering renders expected elements when href is set 1`] = `
<li
  className="Breadcrumb__item"
>
  <a
    href="#"
    other="foo"
    title="Test"
  >
    Test
  </a>
  <span
    aria-hidden="true"
    className="Breadcrumb__separator"
  >
    /
  </span>
</li>
`;

exports[`BreadcrumbItem rendering renders expected elements when href is set and the child is not a string 1`] = `
<li
  className="Breadcrumb__item"
>
  <a
    href="#"
    other="foo"
    title=""
  >
    <span>
      Test
    </span>
  </a>
  <span
    aria-hidden="true"
    className="Breadcrumb__separator"
  >
    /
  </span>
</li>
`;

exports[`BreadcrumbItem rendering renders expected elements when the child is an IconMenu 1`] = `
<li
  className="Breadcrumb__item"
>
  <IconMenu
    icon={[Function]}
  >
    <MenuItem />
  </IconMenu>
  <span
    aria-hidden="true"
    className="Breadcrumb__separator"
  >
    /
  </span>
</li>
`;
